# clavfrancais-windows

./: Cargo.toml  README.md  package-lock.json  package.json
src/: engine.rs  input_simulator.rs  lib.rs  main.rs  window_engine.rs
src-tauri/: Cargo.toml
src-tauri/src/: controllers.rs  lib.rs  setup.rs  tray_menu.rs
src-tauri/src/window_engine/: _main.rs  input_listener.rs  keys_converter.rs  mod.rs  window_engine.rs
