[package]
name = "clavfrancais-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
clavfrancais_engine = { git = "https://github.com/tung-ngt/clavfrancais-engine.git", version = "0.1.0" }
